# kedro-study

./: README.md
study/: README.md  pyproject.toml  requirements.txt
study/conf/base/: parameters_test.yml
study/src/study/: __init__.py  __main__.py  settings.py
study/src/study/pipelines/test/: __init__.py  nodes.py  pipeline.py
study/src/tests/pipelines/test/: test_pipeline.py
