[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "study"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
study = "study.__main__:main"

[tool.kedro]
package_name = "study"
project_name = "study"
kedro_init_version = "0.19.1"
tools = "[]"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "study.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false
